--- a/configs/armv8-mini.config
+++ b/configs/armv8-mini.config
@@ -90,7 +90,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
 # CONFIG_PACKAGE_luci-app-passwall2 is not set
 # CONFIG_PACKAGE_luci-app-ramfree is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
@@ -143,8 +143,8 @@ CONFIG_PACKAGE_luci-app-turboacc=y
 #CONFIG_PACKAGE_zsh=y
 
 # Ipv6 Support
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_ipv6helper=y
+#CONFIG_PACKAGE_ip6tables=y
+#CONFIG_PACKAGE_ip6tables-extra=y
+#CONFIG_PACKAGE_ip6tables-mod-nat=y
